k8s/base/services/app-configurator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-configurator
  namespace: optimistic-tanuki
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-configurator
  template:
    metadata:
      labels:
        app: app-configurator
    spec:
      containers:
        - name: app-configurator
          image: cjrutherford/optimistic_tanuki_app-configurator:sha-2850755da05286086a098d1dbdaf74f339af2a62
          imagePullPolicy: Always
          ports:
            - containerPort: 3014
          resources:
            requests:
              memory: '128Mi'
              cpu: '100m'
            limits:
              memory: '512Mi'
              cpu: '500m'
          livenessProbe:
            tcpSocket:
              port: 3014
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 3014
            initialDelaySeconds: 10
            periodSeconds: 5
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: app-configurator
  namespace: optimistic-tanuki
spec:
  selector:
    app: app-configurator
  ports:
    - port: 3014
      targetPort: 3014
  clusterIP: None
