k8s/base/services/assets.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assets
  namespace: optimistic-tanuki
spec:
  replicas: 2
  selector:
    matchLabels:
      app: assets
  template:
    metadata:
      labels:
        app: assets
    spec:
      containers:
        - name: assets
          image: cjrutherford/optimistic_tanuki_assets:sha-d26936238b90f31051688a18ec5915c3cf53d937
          imagePullPolicy: Always
          ports:
            - containerPort: 3005
          resources:
            requests:
              memory: '128Mi'
              cpu: '100m'
            limits:
              memory: '512Mi'
              cpu: '500m'
          livenessProbe:
            tcpSocket:
              port: 3005
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 3005
            initialDelaySeconds: 10
            periodSeconds: 5
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: assets
  namespace: optimistic-tanuki
spec:
  selector:
    app: assets
  ports:
    - port: 3005
      targetPort: 3005
  clusterIP: None
