k8s/base/services/authentication.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication
  namespace: optimistic-tanuki
spec:
  replicas: 2
  selector:
    matchLabels:
      app: authentication
  template:
    metadata:
      labels:
        app: authentication
    spec:
      containers:
        - name: authentication
          image: cjrutherford/optimistic_tanuki_authentication:sha-2850755da05286086a098d1dbdaf74f339af2a62
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: '128Mi'
              cpu: '100m'
            limits:
              memory: '512Mi'
              cpu: '500m'
          livenessProbe:
            tcpSocket:
              port: 3001
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 5
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: authentication
  namespace: optimistic-tanuki
spec:
  selector:
    app: authentication
  ports:
    - port: 3001
      targetPort: 3001
  clusterIP: None
