k8s/base/services/blogging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blogging
  namespace: optimistic-tanuki
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blogging
  template:
    metadata:
      labels:
        app: blogging
    spec:
      containers:
        - name: blogging
          image: cjrutherford/optimistic_tanuki_blogging:sha-2850755da05286086a098d1dbdaf74f339af2a62
          imagePullPolicy: Always
          ports:
            - containerPort: 3011
          resources:
            requests:
              memory: '128Mi'
              cpu: '100m'
            limits:
              memory: '512Mi'
              cpu: '500m'
          livenessProbe:
            tcpSocket:
              port: 3011
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 3011
            initialDelaySeconds: 10
            periodSeconds: 5
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: blogging
  namespace: optimistic-tanuki
spec:
  selector:
    app: blogging
  ports:
    - port: 3011
      targetPort: 3011
  clusterIP: None
