k8s/base/services/chat-collector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-collector
  namespace: optimistic-tanuki
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chat-collector
  template:
    metadata:
      labels:
        app: chat-collector
    spec:
      containers:
        - name: chat-collector
          image: cjrutherford/optimistic_tanuki_chat-collector:sha-2850755da05286086a098d1dbdaf74f339af2a62
          imagePullPolicy: Always
          ports:
            - containerPort: 3007
          resources:
            requests:
              memory: '128Mi'
              cpu: '100m'
            limits:
              memory: '512Mi'
              cpu: '500m'
          livenessProbe:
            tcpSocket:
              port: 3007
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 3007
            initialDelaySeconds: 10
            periodSeconds: 5
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: chat-collector
  namespace: optimistic-tanuki
spec:
  selector:
    app: chat-collector
  ports:
    - port: 3007
      targetPort: 3007
  clusterIP: None
