k8s/base/services/civic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: civic
  namespace: optimistic-tanuki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: civic
  template:
    metadata:
      labels:
        app: civic
    spec:
      containers:
        - name: civic
          image: cjrutherford/optimistic_tanuki_civic:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3026
          resources:
            requests:
              memory: '128Mi'
              cpu: '100m'
            limits:
              memory: '512Mi'
              cpu: '500m'
          livenessProbe:
            tcpSocket:
              port: 3026
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 3026
            initialDelaySeconds: 10
            periodSeconds: 5
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: civic
  namespace: optimistic-tanuki
spec:
  selector:
    app: civic
  ports:
    - port: 3026
      targetPort: 3026
  clusterIP: None
