k8s/base/services/classifieds.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: classifieds
  namespace: optimistic-tanuki
spec:
  replicas: 2
  selector:
    matchLabels:
      app: classifieds
  template:
    metadata:
      labels:
        app: classifieds
    spec:
      containers:
        - name: classifieds
          image: cjrutherford/optimistic_tanuki_classifieds:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3017
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            tcpSocket:
              port: 3017
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 3017
            initialDelaySeconds: 10
            periodSeconds: 5
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: classifieds
  namespace: optimistic-tanuki
spec:
  selector:
    app: classifieds
  ports:
    - port: 3017
      targetPort: 3017
  clusterIP: None
