k8s/base/services/finance.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finance
  namespace: optimistic-tanuki
spec:
  replicas: 2
  selector:
    matchLabels:
      app: finance
  template:
    metadata:
      labels:
        app: finance
    spec:
      containers:
        - name: finance
          image: cjrutherford/optimistic_tanuki_finance:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3016
          resources:
            requests:
              memory: '128Mi'
              cpu: '100m'
            limits:
              memory: '512Mi'
              cpu: '500m'
          livenessProbe:
            tcpSocket:
              port: 3016
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 3016
            initialDelaySeconds: 10
            periodSeconds: 5
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: finance
  namespace: optimistic-tanuki
spec:
  selector:
    app: finance
  ports:
    - port: 3016
      targetPort: 3016
  clusterIP: None
