k8s/base/services/forum.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forum
  namespace: optimistic-tanuki
spec:
  replicas: 2
  selector:
    matchLabels:
      app: forum
  template:
    metadata:
      labels:
        app: forum
    spec:
      containers:
        - name: forum
          image: cjrutherford/optimistic_tanuki_forum:sha-2850755da05286086a098d1dbdaf74f339af2a62
          imagePullPolicy: Always
          ports:
            - containerPort: 3015
          resources:
            requests:
              memory: '128Mi'
              cpu: '100m'
            limits:
              memory: '512Mi'
              cpu: '500m'
          livenessProbe:
            tcpSocket:
              port: 3015
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 3015
            initialDelaySeconds: 10
            periodSeconds: 5
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: forum
  namespace: optimistic-tanuki
spec:
  selector:
    app: forum
  ports:
    - port: 3015
      targetPort: 3015
  clusterIP: None
