k8s/base/services/learning-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learning-service
  namespace: optimistic-tanuki
spec:
  replicas: 2
  selector:
    matchLabels:
      app: learning-service
  template:
    metadata:
      labels:
        app: learning-service
    spec:
      containers:
        - name: learning-service
          image: cjrutherford/optimistic_tanuki_learning-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3024
          resources:
            requests:
              memory: '128Mi'
              cpu: '100m'
            limits:
              memory: '512Mi'
              cpu: '500m'
          livenessProbe:
            tcpSocket:
              port: 3024
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 3024
            initialDelaySeconds: 10
            periodSeconds: 5
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: learning-service
  namespace: optimistic-tanuki
spec:
  selector:
    app: learning-service
  ports:
    - port: 3024
      targetPort: 3024
  clusterIP: None
