k8s/base/services/payments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments
  namespace: optimistic-tanuki
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
        - name: payments
          image: cjrutherford/optimistic_tanuki_payments:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3018
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            tcpSocket:
              port: 3018
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 3018
            initialDelaySeconds: 10
            periodSeconds: 5
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: payments
  namespace: optimistic-tanuki
spec:
  selector:
    app: payments
  ports:
    - port: 3018
      targetPort: 3018
  clusterIP: None
