k8s/base/services/permissions.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: permissions
  namespace: optimistic-tanuki
spec:
  replicas: 2
  selector:
    matchLabels:
      app: permissions
  template:
    metadata:
      labels:
        app: permissions
    spec:
      containers:
        - name: permissions
          image: cjrutherford/optimistic_tanuki_permissions:sha-2850755da05286086a098d1dbdaf74f339af2a62
          imagePullPolicy: Always
          ports:
            - containerPort: 3012
          resources:
            requests:
              memory: '128Mi'
              cpu: '100m'
            limits:
              memory: '512Mi'
              cpu: '500m'
          livenessProbe:
            tcpSocket:
              port: 3012
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 3012
            initialDelaySeconds: 10
            periodSeconds: 5
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: permissions
  namespace: optimistic-tanuki
spec:
  selector:
    app: permissions
  ports:
    - port: 3012
      targetPort: 3012
  clusterIP: None
