k8s/base/services/profile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile
  namespace: optimistic-tanuki
spec:
  replicas: 2
  selector:
    matchLabels:
      app: profile
  template:
    metadata:
      labels:
        app: profile
    spec:
      containers:
        - name: profile
          image: cjrutherford/optimistic_tanuki_profile:sha-2850755da05286086a098d1dbdaf74f339af2a62
          imagePullPolicy: Always
          ports:
            - containerPort: 3002
          resources:
            requests:
              memory: '128Mi'
              cpu: '100m'
            limits:
              memory: '512Mi'
              cpu: '500m'
          livenessProbe:
            tcpSocket:
              port: 3002
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 3002
            initialDelaySeconds: 10
            periodSeconds: 5
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: profile
  namespace: optimistic-tanuki
spec:
  selector:
    app: profile
  ports:
    - port: 3002
      targetPort: 3002
  clusterIP: None
