k8s/base/services/project-planning.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-planning
  namespace: optimistic-tanuki
spec:
  replicas: 2
  selector:
    matchLabels:
      app: project-planning
  template:
    metadata:
      labels:
        app: project-planning
    spec:
      containers:
        - name: project-planning
          image: cjrutherford/optimistic_tanuki_project-planning:sha-2850755da05286086a098d1dbdaf74f339af2a62
          imagePullPolicy: Always
          ports:
            - containerPort: 3006
          resources:
            requests:
              memory: '128Mi'
              cpu: '100m'
            limits:
              memory: '512Mi'
              cpu: '500m'
          livenessProbe:
            tcpSocket:
              port: 3006
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 3006
            initialDelaySeconds: 10
            periodSeconds: 5
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: project-planning
  namespace: optimistic-tanuki
spec:
  selector:
    app: project-planning
  ports:
    - port: 3006
      targetPort: 3006
  clusterIP: None
