k8s/base/services/social.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: social
  namespace: optimistic-tanuki
spec:
  replicas: 2
  selector:
    matchLabels:
      app: social
  template:
    metadata:
      labels:
        app: social
    spec:
      containers:
        - name: social
          image: cjrutherford/optimistic_tanuki_social:sha-2850755da05286086a098d1dbdaf74f339af2a62
          imagePullPolicy: Always
          ports:
            - containerPort: 3003
          resources:
            requests:
              memory: '128Mi'
              cpu: '100m'
            limits:
              memory: '512Mi'
              cpu: '500m'
          livenessProbe:
            tcpSocket:
              port: 3003
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 3003
            initialDelaySeconds: 10
            periodSeconds: 5
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: social
  namespace: optimistic-tanuki
spec:
  selector:
    app: social
  ports:
    - port: 3003
      targetPort: 3003
  clusterIP: None
