k8s/base/services/store.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store
  namespace: optimistic-tanuki
spec:
  replicas: 2
  selector:
    matchLabels:
      app: store
  template:
    metadata:
      labels:
        app: store
    spec:
      containers:
        - name: store
          image: cjrutherford/optimistic_tanuki_store:sha-2850755da05286086a098d1dbdaf74f339af2a62
          imagePullPolicy: Always
          ports:
            - containerPort: 3013
          resources:
            requests:
              memory: '128Mi'
              cpu: '100m'
            limits:
              memory: '512Mi'
              cpu: '500m'
          livenessProbe:
            tcpSocket:
              port: 3013
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 3013
            initialDelaySeconds: 10
            periodSeconds: 5
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: store
  namespace: optimistic-tanuki
spec:
  selector:
    app: store
  ports:
    - port: 3013
      targetPort: 3013
  clusterIP: None
