k8s/base/services/system-configurator-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: system-configurator-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: system-configurator-api
  template:
    metadata:
      labels:
        app: system-configurator-api
    spec:
      containers:
        - name: system-configurator-api
          image: cjrutherford/optimistic_tanuki_system-configurator-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3021
          readinessProbe:
            tcpSocket:
              port: 3021
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 3021
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: system-configurator-api
spec:
  selector:
    app: system-configurator-api
  ports:
    - protocol: TCP
      port: 3021
      targetPort: 3021
