k8s/base/services/telos-docs-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telos-docs-service
  namespace: optimistic-tanuki
spec:
  replicas: 2
  selector:
    matchLabels:
      app: telos-docs-service
  template:
    metadata:
      labels:
        app: telos-docs-service
    spec:
      containers:
        - name: telos-docs-service
          image: cjrutherford/optimistic_tanuki_telos-docs-service:sha-2850755da05286086a098d1dbdaf74f339af2a62
          imagePullPolicy: Always
          ports:
            - containerPort: 3008
          resources:
            requests:
              memory: '128Mi'
              cpu: '100m'
            limits:
              memory: '512Mi'
              cpu: '500m'
          livenessProbe:
            tcpSocket:
              port: 3008
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 3008
            initialDelaySeconds: 10
            periodSeconds: 5
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: telos-docs-service
  namespace: optimistic-tanuki
spec:
  selector:
    app: telos-docs-service
  ports:
    - port: 3008
      targetPort: 3008
  clusterIP: None
