k8s/base/services/wellness.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wellness
  namespace: optimistic-tanuki
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wellness
  template:
    metadata:
      labels:
        app: wellness
    spec:
      containers:
        - name: wellness
          image: cjrutherford/optimistic_tanuki_wellness:sha-2850755da05286086a098d1dbdaf74f339af2a62
          imagePullPolicy: Always
          ports:
            - containerPort: 3018
          resources:
            requests:
              memory: '128Mi'
              cpu: '100m'
            limits:
              memory: '512Mi'
              cpu: '500m'
          livenessProbe:
            tcpSocket:
              port: 3018
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 3018
            initialDelaySeconds: 10
            periodSeconds: 5
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: wellness
  namespace: optimistic-tanuki
spec:
  selector:
    app: wellness
  ports:
    - port: 3018
      targetPort: 3018
  clusterIP: None
